@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-20T08:16:39Z",
+  "timestamp" : "2022-07-20T16:15:54Z",
   "count_outdated" : 402,
   "uniques_outdated" : 218,
-  "count" : 424,
-  "uniques" : 230,
+  "count" : 426,
+  "uniques" : 231,
   "clones" : [
     {
       "timestamp": "2022-07-06T00:00:00Z",
@@ -77,10 +77,10 @@
     },
     {
       "timestamp": "2022-07-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
