@@ -1,3 +1,10 @@
+2022-07-20T16:15:54Z:
+* notice: last 14d: unq all: 3 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 218 402 / 230 424
+* notice: next accum: outdated-unq outdated-all / unq all: 218 402 / 231 426
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2022-07-20]
+
 2022-07-20T08:16:39Z:
 * notice: last 14d: unq all: 2 22
 * notice: prev accum: outdated-unq outdated-all / unq all: 218 402 / 229 424
